--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -14,7 +14,7 @@ html{
 }
 
 p{
-    color: rgb(0, 0, 0);
+    color:#567272
 }
 
 //transition
@@ -45,10 +45,10 @@ a{
 }
 
 a:hover{
-    color: grey;
+    color: #567272;
     text-decoration: underline;
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(181,181,181);
+    text-decoration-color:#567272;
 }
 
 .logo{
@@ -65,6 +65,7 @@ a:hover{
 #hamburger-nav{
     display: none;
 }
+
 .hamburger-menu{
     position: relative;
     display: inline-block;
@@ -168,8 +169,8 @@ a:hover{
   }
   
 .svgGithub{
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3rem;
+    height: 3rem;
     cursor: pointer;
     path{
         fill: #213547;
@@ -178,8 +179,8 @@ a:hover{
 }
 
 .secondSvg{
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3rem;
+    height: 3rem;
     cursor: pointer;
     path{
         fill: #213547;
@@ -220,11 +221,12 @@ a:hover{
 }
 .section_pic-container{
     display: flex;
-    height: 400px;
-    width: 400px;
+    height: 500px;
+    width: 500px;
     margin: auto 0;
 }
 
+// aqui quede
 .section_text{
     align-self: center;
     text-align: center;
@@ -247,39 +249,6 @@ a:hover{
 }
 
 
-
-//projects
-
-.containerBox {
-    background-color: aqua;
-    width: 100%; 
-}
-
-.containerOne {
-    min-height: 50vh;
-    width:50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.containerTwo {
-    min-height: 50vh;
-    width:50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.containerBoxTwo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    min-height: 50vh;
-    width: 100%; 
-}
 
 
 :root { 
@@ -313,9 +282,11 @@ h1 {
     border-radius: 2rem;
 }
 
+
+
 .btn-color-1, 
 .btn-color-2{
-    border: rgb(53,53,53) 0.1rem solid;
+    border:#213547
 }
 
 .btn-color-1:hover, 
@@ -325,22 +296,216 @@ h1 {
 
 .btn-color-1, 
 .btn-color-2:hover{
-    background: rgb(53,53,53);
+    background:#567272;
     color: white;
 }
 
 .btn-color-1:hover{
-    background-color: rgb(0,0,0);
+    background-color:#213547
 }
 
 .btn-color-2{
-    background: none;
+    color:#213547;
 }
-
-.btn-color-2:hover{
-    border: rgb(255,255,255) 0.1rem solid;
-}
-
 .btn-container{
     gap: 1rem;
 }
+
+/* SECTIONS */
+
+section {
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+  }
+  
+  .section-container {
+    display: flex;
+  }
+  
+
+//about me
+
+#about {
+    position: relative;
+  }
+  
+  .about-containers {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+  }
+  
+  .about-details-container {
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  .about-containers,
+  .about-details-container {
+    display: flex;
+  }
+  
+  .about-pic {
+    border-radius: 2rem;
+    filter: grayscale(100%);
+  }
+  
+  .arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+  }
+  
+  .details-container {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+  }
+  
+  .section-container {
+    gap: 4rem;
+    height: 80%;
+  }
+  
+  .section__pic-container {
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+  }
+
+
+
+/* ICONS */
+
+.icon {
+    cursor: pointer;
+    height: 2rem;
+  }
+
+  //experience 
+  #experience {
+    position: relative;
+  }
+  
+  .experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+  }
+  
+  .experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  .article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+  }
+  
+  article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+  }
+  
+  article .icon {
+    cursor: default;
+  }
+  
+  /* PROJECTS SECTION */
+  
+  #projects {
+    position: relative;
+  }
+  
+  .color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+  }
+  
+  .project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+  }
+  
+  .project-title {
+    margin: 1rem;
+    color: black;
+  }
+  
+  .project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+  }
+  
+  /* CONTACT */
+  
+  #contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+  }
+  
+  .contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: (250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+  }
+  
+  .contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+  }
+  .section__text__p1 {
+    text-align: center;
+  }
+  
+  .contact-info-container p {
+    font-size: larger;
+  }
+  
+  .contact-icon {
+    cursor: default;
+  }
+  
+  .email-icon {
+    height: 2.5rem;
+  }
+  
+  /* FOOTER SECTION */
+  
+  footer {
+    height: 26vh;
+    margin: 0 1rem;
+  }
+  
+  footer p {
+    text-align: center;
+  }
+
+  
