--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,10 +1,6 @@
 //general
 @import url('https://fonts.googleapis.com/css2?gfamily=Poppins:wght@300;400;500;600&displayswap');
 
-*{
-    margin: 0;
-    padding: 0;
-}
 
 body{
     font-family: 'Poppins', sans-serif;
@@ -148,15 +144,6 @@ a:hover{
 
 
 //main
-
-.container {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
-  } 
 .name{
     font-family: "Alex Brush", cursive;
     font-weight: 400;
@@ -425,11 +412,9 @@ section {
   
   article .icon {
     cursor: default;
-  }
-  
-  /* PROJECTS SECTION */
-  
-  #projects {
+  }/* PROJECTS SECTION */
+
+#projects {
     position: relative;
   }
   
@@ -481,9 +466,6 @@ section {
     gap: 0.5rem;
     margin: 1rem;
   }
-  .section__text__p1 {
-    text-align: center;
-  }
   
   .contact-info-container p {
     font-size: larger;
@@ -508,4 +490,7 @@ section {
     text-align: center;
   }
 
-  
+  .section__text__p1 {
+    text-align: center;
+  }
+
