--- a/src/components/mediaQuery.css
+++ b/src/components/mediaQuery.css
@@ -18,7 +18,7 @@
     justify-content: center;
     gap: 5rem;
     height: 80vh;
-    width: 160vh;
+    width: auto;
   }
   .arrow {
     display: none;
@@ -66,6 +66,7 @@
   #profile,
   .section-container {
     display: block;
+    width: auto;
   }
   .arrow {
     display: none;
@@ -95,6 +96,7 @@
   #profile {
     height: 83vh;
     margin-bottom: 0;
+    width: auto;
   }
   article {
     font-size: 1rem;
