--- a/src/components/mediaQuery.scss
+++ b/src/components/mediaQuery.scss
@@ -90,6 +90,9 @@
   }
   
   @media screen and (max-width: 600px) {
+    #about{
+      padding-top:18vh
+    }
     #contact,
     footer {
       height: 40vh;
